<?xml version="1.0"?>
<package format="3">
  <name>hsrb_interface_py</name>
  <version>2.0.0</version>
  <description>HSR-B Python Interface</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>
  <author>Keisuke Takeshita</author>
  <author>Takafumi Mizuno</author>
  <author>Takuma Sugino</author>
  <author>Hiromichi Nakashima</author>
  <author>satoru_onoda</author>

  <license>BSD 3-clause Clear License</license>

  <depend>boost</depend>
  <depend>rclpy</depend>

  <build_depend>eigen</build_depend>

  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend version_gte="0.5.16">tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tmc_planning_msgs</exec_depend>
  <exec_depend>tmc_manipulation_msgs</exec_depend>
  <exec_depend>tmc_control_msgs</exec_depend>
  <exec_depend>python-enum34</exec_depend>
  <exec_depend>python3-lxml</exec_depend>
  <exec_depend>ipython3</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>

  <test_depend>ament_index_python</test_depend>
  <test_depend>hsrb_description</test_depend>
  <test_depend>python3-mock</test_depend>
  <test_depend>python3-nose</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
